association fields are align correctly

--- a/src/cwLayoutFilteredListBox.less
+++ b/src/cwLayoutFilteredListBox.less
@@ -7,7 +7,10 @@ div.filteredListBox {
     }
     .cw-property-details-association {
       text-align: left;
-      width: 100%;
+      p {
+        width: 100%;
+        display: inline-flex;
+      }
     }
     .cw-edit-mode-association-search {
       width: 100%;
@@ -128,7 +131,7 @@ div.filteredListBox {
       }
     }
     .chosen-container {
-      margin-top: 5px;
+      margin-top: 0px;
       .chosen-results {
         li.highlighted {
           background: none;
